--- a/app/src/main/res/layout/fragment_benutzerprofil.xml
+++ b/app/src/main/res/layout/fragment_benutzerprofil.xml
@@ -87,7 +87,7 @@
         android:hint="Email (Emanuel@gmx.de)"
         android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pCityInput" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewNewUserPw" />
 
     <EditText
         android:id="@+id/pNewUserInput"
@@ -99,7 +99,7 @@
         android:hint="neuer Benutzername"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNewUserPw" />
+        app:layout_constraintTop_toBottomOf="@+id/pCityInput" />
 
     <TextView
         android:id="@+id/textViewNewUserPw"
@@ -110,7 +110,7 @@
         android:layout_marginTop="23dp"
         android:text="Eingabe neuer Benutzername und Passwort:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pEmailInput" />
+        app:layout_constraintTop_toBottomOf="@+id/pNewUserInput" />
 
     <EditText
         android:id="@+id/pNewPwInput"
@@ -122,7 +122,7 @@
         android:hint="neues Passwort"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pNewUserInput" />
+        app:layout_constraintTop_toBottomOf="@+id/pEmailInput" />
 
     <EditText
         android:id="@+id/pNameInput"
@@ -163,18 +163,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="143dp"
         android:layout_marginLeft="143dp"
-        android:layout_marginTop="115dp"
-        android:onClick="accept"
+        android:layout_marginBottom="16dp"
         android:text="uebernehmen"
-        app:layout_constraintStart_toEndOf="@+id/abortButton"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNewUserPw" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonBestellungsverlauf"
+        app:layout_constraintStart_toEndOf="@+id/abortButton" />
 
     <Button
         android:id="@+id/buttonBestellungsverlauf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="orderHistory"
         android:text="Bestellungsverlauf"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -185,7 +183,6 @@
         android:id="@+id/buttonLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="logout"
         android:text="Logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
