--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,18 +7,18 @@
     tools:context=".LoginFragment">
 
     <EditText
-        android:id="@+id/lPasswordInput"
+        android:id="@+id/lPasswordInputET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toEndOf="@+id/textViewLPw"
-        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
+        app:layout_constraintStart_toEndOf="@+id/tvLPassword"
+        app:layout_constraintTop_toBottomOf="@+id/lEmailInputET" />
 
     <TextView
-        android:id="@+id/textViewLBenutzername"
+        android:id="@+id/tvLEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -29,18 +29,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/emailLogin"
+        android:id="@+id/lEmailInputET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toEndOf="@+id/textViewLBenutzername"
+        app:layout_constraintStart_toEndOf="@+id/tvLEmail"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewLPw"
+        android:id="@+id/tvLPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -48,38 +48,38 @@
         android:layout_marginTop="25dp"
         android:text="Passwort:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLBenutzername" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLEmail" />
 
     <Button
-        android:id="@+id/buttonlLogin"
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lPasswordInput" />
+        app:layout_constraintTop_toBottomOf="@+id/lPasswordInputET" />
 
     <View
-        android:id="@+id/divider8"
+        android:id="@+id/dividerLogin"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="11dp"
         android:layout_marginBottom="10dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/buttonlRegister"
+        app:layout_constraintBottom_toTopOf="@+id/lRegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonlLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <Button
-        android:id="@+id/buttonlRegister"
+        android:id="@+id/lRegisterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text="Registrieren"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonlLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
