--- a/app/src/main/res/layout/fragment_orderoverview.xml
+++ b/app/src/main/res/layout/fragment_orderoverview.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bestellung"
-        app:layout_constraintHorizontal_bias="0.249"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Preis"
-        app:layout_constraintHorizontal_bias="0.691"
+        app:layout_constraintHorizontal_bias="0.67"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -124,17 +124,26 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/dividerOrderOverview"
         app:layout_constraintTop_toBottomOf="@+id/tvOOQuantity"
         tools:layout_editor_absoluteX="1dp">
 
-        <LinearLayout
-            android:id="@+id/linlayoutOO"
+        <TableLayout
+            android:id="@+id/tableLayoutOO"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_height="wrap_content"></TableLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/tvOOTotalPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintStart_toEndOf="@+id/tvOOTotal"
+        app:layout_constraintTop_toBottomOf="@+id/dividerOrderOverview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
