Bestellung und Uebersicht

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -27,7 +27,7 @@
         android:id="@+id/tvMPizza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pizza"
+        android:text="Gerichte"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toTopOf="@+id/recviewMenu"
         app:layout_constraintEnd_toEndOf="parent"
