--- a/app/src/main/res/layout/fragment_orderoverview.xml
+++ b/app/src/main/res/layout/fragment_orderoverview.xml
@@ -7,36 +7,6 @@
     tools:context=".OrderOverviewFragment">
 
     <TextView
-        android:id="@+id/tvOOOrder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bestellung"
-        app:layout_constraintHorizontal_bias="0.07"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvOOQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Menge"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvOOPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Preis"
-        app:layout_constraintHorizontal_bias="0.67"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tvOOTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -123,24 +93,75 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <TableLayout
+        android:id="@+id/tableLayoutOO"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/dividerOrderOverview"
-        app:layout_constraintTop_toBottomOf="@+id/tvOOQuantity"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
-            android:id="@+id/tableLayoutOO"
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_weight="1"
+                android:text="Gericht"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_weight="1"
+                android:text="Menge"
+                android:textSize="16sp"></TextView>
+
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_weight="1"
+                android:text="Preis"
+                android:textSize="16sp"></TextView>
+
+            <TextView
+                android:id="@+id/tvEntfernenOO"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+                android:layout_weight="1"
+                android:text="Entfernen"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></TableLayout>
-    </ScrollView>
+            android:layout_height="2dp"
+            android:background="@color/black" />
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TableLayout
+                android:id="@+id/orders_tableOO"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:stretchColumns="*" />
+        </ScrollView>
+    </TableLayout>
 
     <TextView
         android:id="@+id/tvOOTotalPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="0.0 €"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.528"
         app:layout_constraintStart_toEndOf="@+id/tvOOTotal"
